--- a/PalermoTiGuida/Classes/Views/LeftMenuSection/PTGLeftMenuSection.xib
+++ b/PalermoTiGuida/Classes/Views/LeftMenuSection/PTGLeftMenuSection.xib
@@ -8,30 +8,30 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clipsSubviews="YES" contentMode="scaleToFill" id="i0X-bv-W9o" customClass="PTGLeftMenuSection">
-            <rect key="frame" x="0.0" y="0.0" width="257" height="64"/>
+            <rect key="frame" x="0.0" y="0.0" width="257" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="table_middle_cell_bg.png" id="axH-3z-XZZ">
-                    <rect key="frame" x="-8" y="0.0" width="274" height="64"/>
+                    <rect key="frame" x="-8" y="0.0" width="274" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ObI-lJ-dcZ">
-                    <rect key="frame" x="20" y="20" width="182" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="12"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="arrow_down.png" highlightedImage="left_menu_up_arrow.png" id="Dbq-BJ-iLK">
-                    <rect key="frame" x="210" y="17" width="27" height="27"/>
+                    <rect key="frame" x="217" y="8" width="27" height="27"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                 </imageView>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tq3-F9-WSD">
+                    <rect key="frame" x="20" y="0.0" width="182" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" red="0.95686274510000002" green="0.98431372549999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="arrowImage" destination="Dbq-BJ-iLK" id="GOF-J0-TUi"/>
-                <outlet property="sectionTitle" destination="ObI-lJ-dcZ" id="efK-gg-lZ8"/>
+                <outlet property="sectionTitle" destination="tq3-F9-WSD" id="fhE-gl-tiG"/>
             </connections>
         </view>
     </objects>
