--- a/PalermoTiGuida/Classes/Views/DescriptionView/PTGDescriptionView.xib
+++ b/PalermoTiGuida/Classes/Views/DescriptionView/PTGDescriptionView.xib
@@ -52,11 +52,11 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="smH-Qx-mtq">
-                            <rect key="frame" x="155" y="20" width="130" height="33"/>
+                            <rect key="frame" x="150" y="20" width="140" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <size key="titleShadowOffset" width="0.0" height="-1"/>
-                            <state key="normal" title="Trova imbarcao" backgroundImage="black_button_bg.png">
+                            <state key="normal" title="Trova Imbarcao" backgroundImage="black_button_bg.png">
                                 <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                             <connections>
