--- a/PalermoTiGuida/Classes/Views/MapAnnotationView/PTGCustomMapView.xib
+++ b/PalermoTiGuida/Classes/Views/MapAnnotationView/PTGCustomMapView.xib
@@ -44,7 +44,7 @@
                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="shadowColor" red="0.043137254901960784" green="0.047058823529411764" blue="0.050980392156862744" alpha="1" colorSpace="calibratedRGB"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" contentMode="left" text="Distante da te:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IC2-s0-LQ2">
+                <label opaque="NO" clipsSubviews="YES" contentMode="left" text="Distanta da te:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IC2-s0-LQ2">
                     <rect key="frame" x="85" y="48" width="88" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
